loader/NeptusMain: Cleanup Java9+ deprecation of newInstance.